--- a/bootcamp01/src/main/webapp/trxlist.zul
+++ b/bootcamp01/src/main/webapp/trxlist.zul
@@ -2,10 +2,10 @@
 <zk>
 	<window title="Transaction List" border="normal"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm')@init('com.sdd.bootcamp01.TrxListVm')" 
+		viewModel="@id('vm')@init('com.sdd.bootcamp01.TrxListVm')"
 		validationMessages="@id('vmsg')">
-		
-		<groupbox mold="3d" title="Form Entry" 
+
+		<groupbox mold="3d" title="Form Entry"
 			form="@id('e') @load(vm.obj) @save(vm.obj, before='doSubmit') 
 			@validator(vm.formValidator)">
 			<grid>
@@ -17,53 +17,61 @@
 					<row>
 						<label value="Transaction ID" />
 						<vlayout>
-							<label value="@load(vmsg['trxid'])" style="color: red" />
+							<label value="@load(vmsg['trxid'])"
+								style="color: red" />
 							<textbox value="@bind(e.trxid)" />
 						</vlayout>
 					</row>
 					<row>
 						<label value="Transaction Date" />
 						<vlayout>
-							<label value="@load(vmsg['trxdate'])" style="color: red" />
+							<label value="@load(vmsg['trxdate'])"
+								style="color: red" />
 							<datebox value="@bind(e.trxdate)" />
-						</vlayout>						
+						</vlayout>
 					</row>
 					<row>
 						<label value="Product" />
-						<combobox id="cbProduct" selectedItem="@bind(vm.product)"
+						<combobox id="cbProduct"
+							selectedItem="@bind(vm.product)"
 							model="@load(vm.productModel)">
 							<template name="model" var="product">
-								<comboitem label="@load(product.productname)" />
+								<comboitem
+									label="@load(product.productname)" />
 							</template>
 						</combobox>
 					</row>
 					<row>
 						<label value="Product Price" />
-						<decimalbox value="@bind(vm.product.price)"  readonly="true"
-							format="###,##0" style="text-align: right" />
+						<decimalbox value="@bind(vm.product.price)"
+							readonly="true" format="###,##0" style="text-align: right" />
 					</row>
 					<row>
 						<label value="Quantity" />
-						<intbox value="@bind(e.trxqty)" style="text-align: right" />
+						<intbox value="@bind(e.trxqty)"
+							style="text-align: right" />
 					</row>
 					<!-- <row>
 						<label value="Transaction Amount" />
 						<decimalbox value="@bind(vm.obj.trxamount)" 
-							format="###,##0" style="text-align: right" />
-					</row> -->
+						format="###,##0" style="text-align: right" />
+						</row> -->
 				</rows>
 				<foot>
 					<footer>
 						<label />
 						<hlayout>
-							<button id="btSave" label="Submit" onClick="@command('doSubmit')" />						
-							<button label="Reset Data List" onClick="@command('doClear')" />
-						</hlayout>						
+							<button id="btSave" label="Submit"
+								onClick="@command('doSubmit')" />
+							<button label="Reset Data List"
+								onClick="@command('doClear')"
+								style="background-color:grey; color-white;" />
+						</hlayout>
 					</footer>
 				</foot>
 			</grid>
 		</groupbox>
-		
+
 		<separator />
 		<grid id="grid">
 			<columns>
@@ -73,17 +81,17 @@
 				<column label="Date" align="center" />
 				<column label="Product" />
 				<column label="Quantity" />
-				<column label="Product Price" />				
+				<column label="Product Price" />
 				<column label="Amount" align="right" />
 				<column label="Action" align="center" />
 			</columns>
 			<rows>
-							
+
 			</rows>
 			<foot>
 				<footer span="6" align="left">
-					<button label="Display Data Selected" 
-					onClick="@command('doDisplay')" />
+					<button label="Display Data Selected"
+						onClick="@command('doDisplay')" />
 				</footer>
 			</foot>
 		</grid>
